@@ -2,6 +2,7 @@ Revision history for Perl extension DTL::Fast.
 
 1.613 - in development
     - implemented html_protect in C, test performance increased 17%, fixes #32
+    - internal context access optimisation, total performance increase 30%
 
 1.612 - Sun 15 Feb 2015 18:40 MSK
     - Fixed timeuntil test race condition, thanks to @eserte, fixes #59
